# reset-arduino

./: README.md
VisualStudio2012/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  reset-arduino.opensdf  reset-arduino.sln  reset-arduino.vcxproj  reset-arduino.vcxproj.filters
VisualStudio2012/Debug/: reset-arduino.ilk
VisualStudio2012/libs/: Arduino.vcxproj  Arduino.vcxproj.filters  cmake_install.cmake
VisualStudio2012/libs/Debug/: Arduino.lib
VisualStudio2012/reset-arduino.dir/Debug/reset-arduino.tlog/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
reset-arduino/: Arduino.cpp  Arduino.h  CMakeLists.txt  main.c  main.cpp  reset_arduino.1
reset-arduino.xcodeproj/: project.pbxproj
reset-arduino.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
reset-arduino.xcodeproj/project.xcworkspace/xcshareddata/: reset-arduino.xccheckout
reset-arduino.xcodeproj/project.xcworkspace/xcuserdata/clark.xcuserdatad/: UserInterfaceState.xcuserstate
reset-arduino.xcodeproj/xcuserdata/clark.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
reset-arduino.xcodeproj/xcuserdata/clark.xcuserdatad/xcschemes/: reset-arduino.xcscheme
reset-arduino.xcodeproj/xcuserdata/wclark.xcuserdatad/xcschemes/: reset-arduino.xcscheme  xcschememanagement.plist
reset-arduino/libs/: Arduino.cpp  Arduino.h  CMakeLists.txt
(+13 files in other folders)
